<resources>
    <string name="app_name">CIDApp</string>
    <string name="label_new_register">New Register</string>
    <string name="label_login">Login</string>
    <string name="label_sms_verification">Missing SMS Verification</string>
    <string name="label_missing_device">Missing Device</string>
    <string name="label_enter_firstname">First Name</string>
    <string name="label_enter_confirm_pass">Confirm Password</string>
    <string name="label_enter_password">Password</string>
    <string name="label_enter_email">Email</string>
    <string name="label_enter_lastname">Last Name</string>
    <string name="label_number">Enter Phone Number</string>
    <string name="label_continue">Continue</string>
    <string name="label_verify">Verify</string>
    <string name="label_verify_code">Verification Code</string>
    <string name="label_terms_conditions"><font color="#0998f1">Terms &amp; Conditions</font></string>
    <string name="label_agree">I Agree</string>
    <string name="label_verify_your_number">Verify your number</string>
    <string name="label_logout">Logout</string>
    <string name="wifi_error_message">It might be slower to use application.Please enable your wifi, to get fater access application.</string>
    <string name="label_device_model">Device Model : %s</string>
    <string name="label_device_menufecture">Device Menufecture : %s</string>
    <string name="label_device_os">Device OS Version : %s</string>
    <string name="label_device_imei">Device IMEI : %s</string>
    <string name="label_phone_number">Phone Number : %s</string>
    <string name="label_forgotpassword"><font color='blue'><b>Forgot Password?</b></font></string>
    <string name="label_already_account"><font color='blue'><b>Already have an account?</b></font></string>
    <string name="label_submit">Submit</string>
    <string name="label_resend">Resend Code</string>
    <string name="label_number_verification_info">
        This phone number will be used to verify your Identity.
         Verification Codes will be send to this number.
         This Number must be able to receive SMS Text Messages</string>
    <string name="label_profile">Profile</string>
    <string name="label_enter_birthdate">Birth Date</string>
    <string name="label_enter_address">Address</string>
    <string name="label_street1">Street1</string>
    <string name="label_street2">Street2</string>
    <string name="label_postalcode">Postal Code</string>
    <string name="label_city">City</string>
    <string name="label_enter_new_email">Enter New Email</string>
    <string name="label_update">Update</string>
    <string name="label_support">Support</string>
    <string name="label_add_device">Add Device</string>
    <string name="label_enter_comapny_code">Company Code</string>
    <string name="label_phone_number_form">Phone Number</string>
    <string name="label_name_form">Name</string>
    <string name="label_notes_form">Note</string>
    <string name="label_message_form">Message</string>
    <string name="label_add_transcation">Transaction Form</string>
    <string name="label_transcation_list">Transaction List</string>
</resources>
