<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footerMenu"

        android:background="@color/white"
        android:fillViewport="true"
        tools:context="com.example.cidapp.Register">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/update_tvGeoCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_10"
                android:text=""
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/update_tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_10"
                android:text="Email"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/update_tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="Phone"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/update_layFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/update_etFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_enter_firstname" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/update_layLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/update_etLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_enter_lastname"

                    />
            </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/update_etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:text="@string/label_enter_birthdate"

                    android:paddingRight="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingLeft="@dimen/dp_5"
                    android:textColor="@color/black"

                    />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/update_layStreet1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/update_etStreet1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_street1"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"

                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/update_layStreet2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/update_etStreet2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_street2"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"

                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/update_layCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/update_etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_city"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"

                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/update_layPostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/update_etPostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_postalcode"
                    android:inputType="textPostalAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:maxLength="6"
                    />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/update_spCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/update_tvStatus"
                android:text="Status"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_10"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/update_tvProfileId"
                android:text="Profile ID"
                android:textColor="@color/black"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_10"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/update_tvLastupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_10"
                android:text="Last update on "
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/update_btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="Update" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <include layout="@layout/lay_footer_menu" />
    </LinearLayout>
</RelativeLayout>